feat: work on backporting new JamLib to 1.20.1, while still maintaining API compatibility with pre 1.0.0 JamLib